--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -53,7 +53,7 @@
                     <div class="form-inner">
                         <!--reset Form-->
                         <blockquote class="blockquote-style-one mb-5 mt-5">
-                            <p>Un compte correspondant à votre adresse e-mail existe, alors un e-mail vient d'être envoyé contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe.
+                            <p>Si un compte correspondant à votre adresse e-mail existe, un e-mail contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe vient de vous être envoyé.
                                 Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
                             <cite>Si vous ne recevez pas d'e-mail, vérifiez votre dossier de courrier indésirable (spam) ou <a href="{{ path('app_forgot_password_request') }}">réessayez</a>.</cite>
                         </blockquote>
