--- a/templates/stand/_form.html.twig
+++ b/templates/stand/_form.html.twig
@@ -14,6 +14,7 @@
         <div class="col-md-3">{{ form_row(form.nombreParticipationCanditatStand) }}</div>
         <div class="col-md-3">{{ form_row(form.codeInscription) }}</div>
         <div class="col-md-3">{{ form_row(form.isUne) }}</div>
+        <div class="col-md-3">{{ form_row(form.regroupementCandidatures) }}</div>
         {{ form_row(form.documents) }}
     </div>
     <div class="row">
