--- a/templates/stand/edit.html.twig
+++ b/templates/stand/edit.html.twig
@@ -69,6 +69,7 @@
                                                 <div class="col-md-3">{{ form_row(form.nombreParticipationCanditatStand) }}</div>
                                                 <div class="col-md-3">{{ form_row(form.codeInscription) }}</div>
                                                 <div class="col-md-3">{{ form_row(form.isUne) }}</div>
+                                                <div class="col-md-3">{{ form_row(form.regroupementCandidatures) }}</div>
                                                 {{ form_row(form.documents) }}
                                                 {% if app.request.attributes.get('_route') == 'stand_edit' %}
                                                     <div class="title">Documents</div>
