--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,8 @@
         {{ include('layouts/footer.html.twig') }}
     </div>
 
-    {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+    {% endblock %}
     </body>
 </html>
