--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -8,7 +8,7 @@
             <li class="active"><a href="{{ path('dashboard') }}"> <i class="la la-home"></i>Dashboard</a></li>
             <li><a href="{{ path('blog_index') }}"><i class="la la-paper-plane"></i>Actualités</a></li>
             <li><a href="{{ path('annuaire_index') }}"><i class="la la-box"></i>Annuaire</a></li>
-            <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i>Candidatures</a></li>
+            <li><a href="{{ path('candidaturesRecruteur') }}"><i class="la la-file-invoice"></i>Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-folder"></i>CVthèque</a></li>
             <li><a href="{{ path('dictionnaire_index') }}"><i class="la la-paperclip"></i>Dictionnaire</a></li>
             <li><a href="{{ path('email_index') }}"><i class="la la-mail-bulk"></i>Email templates</a></li>
