--- a/templates/dashboard/sidebar-candidat.html.twig
+++ b/templates/dashboard/sidebar-candidat.html.twig
@@ -9,11 +9,12 @@
             <li>{% if app.user.profile %}<a href="{{ path('profile_show', {'id': app.user.profile.id}) }}"><i class="la la-user-tie"></i>Mon profile</a>
                 {% else %}<a href="{{ path('profile_new') }}"><i class="la la-user-tie"></i>Créer mon profile</a>{% endif %}
             </li>
+            <li><a href="{{ path('candidaturesCandidat') }}"><i class="la la-box"></i>Mes candidatures</a></li>
             <li><a href="candidate-dashboard-resume.html"><i class="la la-file-invoice"></i>Mes rendez-vous</a></li>
-            <li><a href="{{ path('annonce_favoris') }}"><i class="la la-briefcase"></i>Mes offres d'emploi</a></li>
-            <li><a href="{{ path('stand_favoris') }}"><i class="la la-briefcase"></i>Mes stands favoris</a></li>
+            <li><a href="{{ path('annonce_favoris') }}"><i class="la la-heart"></i>Mes offres d'emploi</a></li>
+            <li><a href="{{ path('stand_favoris') }}"><i class="la la-bookmark-o"></i>Mes stands favoris</a></li>
             <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Mes forums</a></li>
-            <li><a href="{{ path('profile_my_cv', {'id': app.user.profile.id}) }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
+            {% if app.user.profile %}<li><a href="{{ path('profile_my_cv', {'id': app.user.profile.id}) }}"><i class="la la-file-invoice"></i>Mes CV</a></li>{% endif %}
             {#<li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
             <li><a href="candidate-dashboard-shortlisted-resume.html"><i class="la la-bookmark-o"></i>Shortlisted Jobs</a></li>
             <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>#}
