--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,4 +1,4 @@
-<h1>Hi!</h1>
+<h1>Bonjour!</h1>
 
 <p>Pour réinitialiser votre mot de passe, veuillez consulter le lien suivant</p>
 
@@ -7,3 +7,5 @@
 <p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
 
 <p>Cordialement</p>
+
+<b>L'équipe Talents Handicap</b>
