--- a/assets/styles/template/style.scss
+++ b/assets/styles/template/style.scss
@@ -7085,7 +7085,7 @@ Job Section Four
     align-items: center;
     height: 90px;
     width: 90px;
-    border-radius: 50%;
+    //border-radius: 50%;
     overflow: hidden;
     margin: 0 auto 12px;
     -webkit-transition: all 300ms ease;
@@ -10125,7 +10125,7 @@ Candidates Section Two
     font-size: 20px;
     color: #1967D2;
     font-weight: 400;
-    margin-left: 40px;
+    //margin-left: 40px;
 }
 
 .resume-action .theme-btn:after{
