--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -7,6 +7,7 @@
         <ul class="navigation">
             <li class="active"><a href="{{ path('dashboard') }}"> <i class="la la-home"></i>Dashboard</a></li>
             <li><a href="{{ path('blog_index') }}"><i class="la la-paper-plane"></i>Actualités</a></li>
+            <li><a href="{{ path('animation_index') }}"><i class="la la-microphone"></i>Animations</a></li>
             <li><a href="{{ path('annuaire_index') }}"><i class="la la-box"></i>Annuaire</a></li>
             <li><a href="{{ path('candidaturesRecruteur') }}"><i class="la la-file-invoice"></i>Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-folder"></i>CVthèque</a></li>
