--- a/templates/home/annonces.html.twig
+++ b/templates/home/annonces.html.twig
@@ -18,8 +18,8 @@
     <!--End Page Title-->
 
     <!-- Listing Section -->
-    <section class="ls-section js-filter">
-        <div class="auto-container">
+    <section class="ls-section">
+        <div class="auto-container js-filter">
             <div class="filters-backdrop"></div>
 
             <div class="row">
