--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -6,7 +6,8 @@
         'stands_all',
         'stand_page',
         'forums_all',
-        'forum_page'
+        'forum_page',
+        'conseils'
     ]
 %}
 <!-- Header Span -->
