--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{ asset('images/favicon.png') }}" type="image/x-icon" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Talents Handicap{% endblock %}</title>
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
     </head>
     <body>
