--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{ asset('images/favicon.png') }}" type="image/x-icon" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Talents Handicap{% endblock %}</title>
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
     </head>
     <body data-anm=".anm">
