--- a/templates/layouts/StandsSection.html.twig
+++ b/templates/layouts/StandsSection.html.twig
@@ -29,7 +29,7 @@
                     </span>
                             <span class="company-name">Catalyst</span>
                             <h4><a href="{{ path('stand_page', {'slug': stand.slug}) }}">{{ stand.nom|slice(0, 20) }}</a></h4>
-                            <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
+                            {#<div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>#}
                             <ul class="post-tags">
 
                             </ul>
