--- a/assets/styles/template/style.scss
+++ b/assets/styles/template/style.scss
@@ -12327,7 +12327,7 @@ Top Companies
     display: block;
     height: 60px;
     width: 60px;
-    border-radius: 50%;
+    //border-radius: 50%;
     overflow: hidden;
     margin: 0 auto 12px;
     -webkit-transition: all 300ms ease;
