--- a/assets/styles/multi_step_form.scss
+++ b/assets/styles/multi_step_form.scss
@@ -1,46 +1,15 @@
-.stepwizard-step p {
-  margin-top: 10px;
+.messages-box,
+.chat-box {
+  height: 510px;
+  overflow-y: scroll;
 }
 
-.stepwizard-row {
-  display: table-row;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
-
-.stepwizard {
-  display: table;
-  width: 100%;
-  position: relative;
-}
-
-.stepwizard-step button[disabled] {
-  opacity: 1 !important;
-  filter: alpha(opacity=100) !important;
-}
-
-.stepwizard-row:before {
-  top: 14px;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 100%;
-  height: 1px;
-  background-color: #ccc;
-  z-order: 0;
-
-}
-
-.stepwizard-step {
-  display: table-cell;
-  text-align: center;
-  position: relative;
-}
-
-.btn-circle {
-  width: 30px !important;
-  height: 30px !important;
-  text-align: center !important;
-  padding: 6px 0 !important;
-  font-size: 12px !important;
-  line-height: 1.428571429 !important;
-  border-radius: 15px !important;
+.router-link-active {
+  z-index: 2!important;
+  color: #fff!important;
+  background-color: #007bff!important;
+  border-color: #007bff!important;
 }
